--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -4,31 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChainIntel Hub</title>
-    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/react@18/umd/react.production.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/react-dom@18/umd/react-dom.production.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7/babel.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3/dist/chart.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <header>
-        <h1>ChainIntel Hub - Cross-Chain Intelligence</h1>
-        <nav>
-            <a href="#alerts">Alerts</a>
-            <a href="#opportunities">Opportunities</a>
-            <a href="#reports">Reports</a>
-        </nav>
-    </header>
-    <main>
-        <section id="live-monitoring">
-            <h2>Live Monitoring</h2>
-            <div id="chain-status"></div>
-        </section>
-        <section id="opportunities">
-            <h2>Top Opportunities</h2>
-            <div id="opportunity-list"></div>
-        </section>
-        <section id="intelligence-feed">
-            <h2>Intelligence Feed</h2>
-            <div id="alert-feed"></div>
-        </section>
-    </main>
-    <script src="app.js"></script>
+    <div id="root"></div>
+    <script type="text/babel" src="app.js"></script>
 </body>
 </html>
